fix z-index weirdness on create DM page

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -1010,7 +1010,6 @@
 					left: 0;
 					right: 0;
 					display: block;
-					z-index: 1;
 					position: sticky;
 					&.clickable {
 						cursor: pointer;
